fix(media-player): fix the media player layout's alignment

--- a/src/renderer/src/features/media-player/components/MediaPlayerLayout.module.scss
+++ b/src/renderer/src/features/media-player/components/MediaPlayerLayout.module.scss
@@ -1,7 +1,7 @@
 .mediaPlayerLayout {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
-   align-items: center;
+   align-items: end;
 
    padding: var(--appSideSpace);
 }
